syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Greet (GreetRequest) returns (GreetReply);
  // server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesReply);
  // client streaming
  rpc LongGreet (stream LongGreetRequest) returns (LongGreetReply);
}

// The request message containing the user's name.
message GreetRequest {
  Greeting greeting = 1;
}
// The response message containing the greetings.
message GreetReply {
  string result = 1;
}

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesReply {
  string result = 1;
}


message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetReply {
  string result = 1;
}